@@ -17026,6 +17026,11 @@ Capture group count = 1
 First code unit = 'a'
 Subject length lower bound = 1
 
+/A(?:(*ACCEPT))?B/info
+Capture group count = 0
+First code unit = 'A'
+Subject length lower bound = 1
+
 # End of testinput2
 Error -70: PCRE2_ERROR_BADDATA (unknown error number)
 Error -62: bad serialized data
